# libepecur

./: .raring-pinning.sh  .travis.yml  CMakeLists.txt  FindBoostEndian.cmake  FindGSL.cmake  FindROOT.cmake  README.md  _config.yml  get_rev_id.sh
_posts/: 2012-10-17-1.md  2012-10-17-2.md  2012-10-18-3.md  2012-10-18-4.md  2012-11-01-5.md  2013-04-07-6.md  2013-04-07-7.md  2013-04-07-8.md  2013-04-20-9.md  2013-04-24-10.md  2013-06-13-11.md  2013-09-11-12.md  2013-09-17-13.md  2013-10-06-14.md  2013-10-08-15.md  2013-11-24-16.md  2013-12-03-17.md  2014-01-06-18.md  2014-10-09-19.md  2014-12-23-20.md  2015-01-07-21.md  2015-01-08-22.md  2015-01-09-23.md  2015-01-11-24.md  2015-01-19-25.md  2015-03-24-26.md  2015-03-25-27.md  2015-03-29-28.md  2015-03-29-29.md  2015-03-30-30.md  2015-04-12-31.md  2015-04-14-32.md  2015-04-15-33.md  2015-06-03-34.md  2015-06-11-35.md  2015-06-12-36.md  2015-06-21-37.md
assets/: Epecur_data_format_V1_1.doc  adjustment_shifts.ps  track_intersections.ps
contrib/: geom_apr10.c  list_apr10  rootlogon.C
macros/: CMakeLists.txt  InclCrossSection.C  InclCrossSection.h  InelCrossSection.C  InelCrossSection.h  adjustment_shifts.C  calib_func.C  drift_calib.C  drift_calib_curve.C  drift_chisq.C  drift_effectivity.C  drift_effectivity.h  drift_effectivity_over_time.C  drift_efficiency.C  drift_efficiency.h  drift_efficiency_over_time.C  drift_pickups.C  drift_sum_rule.C  final_plot.C  first_focus.C  kinematics_common.h  make_info_table.C  make_plots.cpp  mk_finals.py  normalization_plot.C  target_info.C  theta_cm_correlation.C  theta_phi.C  track_intersections.C  track_plane_section.C  utils.C
scripts/: make_plots.sh  webview.py
src/: CMakeLists.txt
src/endian/.svn/: wc.db
src/epecur/: CMakeLists.txt  StdDrift.cpp  StdDrift.hpp  StdHits.cpp  StdHits.hpp  TrackRecognitionHook.cpp  TrackRecognitionHook.hpp  TrackReconstructionHook.cpp  TrackReconstructionHook.hpp  cxx11_compat.hpp  geometry.cpp  geometry.hpp  git-rev-export.cpp  git-rev-export.hpp  loadfile.cpp  loadfile.hpp  track.cpp  track.hpp  types.hpp
src/utils/: CMakeLists.txt
src/utils/axial_shift/: AxialShiftApp.cpp  AxialShiftApp.hpp  AxialShiftHook.cpp  AxialShiftHook.hpp  CMakeLists.txt
src/utils/export_tree/: CMakeLists.txt  DriftCalibHook.cpp  DriftCalibHook.hpp  ThinOutHook.hpp  TreeExportApp.cpp  TreeExportApp.hpp  TreeExportHook.cpp  TreeExportHook.hpp
src/utils/momentum_dispersion/: CMakeLists.txt  EvSumHook.cpp  EvSumHook.hpp  MomentumDispersionApp.cpp  MomentumDispersionApp.hpp  main.cpp  main.hpp
src/utils/process/: CMakeLists.txt  Process2ndPass.cpp  Process2ndPass.hpp  ProcessApp.cpp  ProcessApp.hpp  ProcessMain.cpp  ProcessMain.hpp  ProcessVisualizer.cpp  ProcessVisualizer.hpp
src/utils/show_events/: CMakeLists.txt  EvShowHook.cpp  EvShowHook.hpp  ShowEventsApp.cpp  ShowEventsApp.hpp
tests/: CMakeLists.txt  StdHits_test.cpp  TrackRecognitionHook_test.cpp  TrackReconstructionHook_test.cpp  loadfile_test.cpp  track_test.cpp
